Changelog
=========

1.3 (unreleased)
----------------

- Nothing changed yet.


1.2.2 (2012-03-29)
------------------

- Make amqp server configurable for tests.


1.2.1 (2012-02-22)
------------------

- Switch to plone.testing.


1.2.0 (2011-08-23)
------------------

- Transform the XML body into a nested dict so ElasticSearch can index the
  fields individually.


1.1.0 (2011-08-23)
------------------

- Add command-line script ``reindex_directory``.


1.0.0 (2011-08-22)
------------------

- first release.