@@ -4,7 +4,9 @@ Changelog
 1.3 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Catch connection errors to ElasticSearch so they don't break the normal
+  message handling. Messages that have not been index due to this can still be
+  indexed later on via ``reindex_directory`` (#9363).
 
 
 1.2.2 (2012-03-29)
